# Jeu_IA

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
CI/: ci.yml
PlantUML/: ClassDiagram.puml  UserCases.puml
src/: CMakeLists.txt  GraphiqueSDL.h  MinMaxAlgo.cpp  MinMaxAlgo.h  Tree.h  TreeNode.h  main.cpp  tests_minMaxAlgo.h
tests/: CMakeLists.txt  tests_minMaxAlgo.cpp  tests_minMaxAlgo.h
